--- a/Project.toml
+++ b/Project.toml
@@ -8,17 +8,17 @@ FastGaussQuadrature = "442a2c76-b920-505d-bb47-c5924d526838"
 FiniteDiff = "6a86dc24-6348-571c-b903-95158fe2bd41"
 ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+RectiGrids = "8ac6971d-971d-971d-971d-971d5ab1a71a"
 
 [compat]
 FastGaussQuadrature = "1"
+FiniteDiff = "2"
 ForwardDiff = "0.10"
 julia = "1"
-FiniteDiff = "2"
 
 [extras]
-Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
-
+Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 
 [targets]
-test = ["Test","SpecialFunctions"]
+test = ["Test", "SpecialFunctions"]
